--- a/src/styles/lx-expanders.css
+++ b/src/styles/lx-expanders.css
@@ -46,6 +46,10 @@
   color: var(--color-region-hover-foreground);
 }
 
+.lx-form-grid>.lx-main .lx-row .lx-expander {
+  color: var(--color-region-hover-foreground);
+}
+
 .lx-expander:not([data-disabled]) .lx-head:hover svg:not(.lx-button-ghost, .lx-button-icon, .lx-badge-icon) {
   fill: var(--color-region-hover-foreground);
 }
